@@ -794,6 +794,7 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Configuration-Topology Facility
 <li>HFP-Unnormalized-Extensions Facility
 <li>Load/Store-on-Condition Facility
+<li>Distinct-Operands Facility
 </ul>
 
 <P>The following optional features of z/Architecture have not yet been implemented:</P>
@@ -807,7 +808,6 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>CPU-Measurement Sampling Facility
 <li>High-Word Facility
 <li>Interlocked-Access Facility
-<li>Distinct-Operands Facility
 <li>Population-Count Facility
 <li>Floating-Point-Extension Facility
 <li>Message-Security-Assist Extension 3
